--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,11 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "eslint-plugin-import-helpers", "prettier"],
+  "plugins": [
+      "@typescript-eslint", 
+      "eslint-plugin-import-helpers", 
+      "prettier"
+    ],
   "rules": {
     "camelcase": "off",
     "prettier/prettier": "error",
@@ -57,7 +61,9 @@
     "import/no-extraneous-dependencies": [
       "error",
       { "devDependencies": ["**/*.spec.ts"] }
-    ]
+    ],
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": ["error"]
   },
   "settings": {
     "import/resolver": {
